[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/ball_16.png" type="Texture" id=1]
[ext_resource path="res://SpawnSprite.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 21.222

[node name="SpawnSprite" type="Area2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
